--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="canvas_wrapper">
         <div class="canvas_left">
-            <canvas id="neonSignCanvas" width="600" height="60"></canvas>
+            <canvas id="neonSignCanvas"></canvas>
             <span class="neonSignHelper"></span>
             <img id="neonSignImage">
         </div>
